src/objects/Guarantee_Details__c.object
<CustomObject>
    <fields>
        <fullName>address_town_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordenante</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>adjusted_guarantee_amount__c</fullName>
        <label>Valor a nuevo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amount_real__c</fullName>
        <label>Valor de realización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>asset_type__c</fullName>
        <label>Tipo de bien</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CASA HABITACION</fullName>
                </value>
                <value>
                    <fullName>LOCAL COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>LOCAL INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>TERRENO</fullName>
                </value>
                <value>
                    <fullName>OTROS (Embarcaciones)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blocked_amount__c</fullName>
        <label>Monto retenido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bco corresponsal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_assessed_amount__c</fullName>
        <label>Valor de tasación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha vcto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>financed_asset_address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dirección del inmueble</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>general_deposit_warehouse_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Depósito</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_account_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de cuenta</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_id__c</fullName>
        <label>Garantía</label>
        <referenceTo>Guarantee__c</referenceTo>
        <relationshipLabel>Detalles de garantías</relationshipLabel>
        <relationshipName>Detalles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>guarantee_letter_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>N° carta SBLC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_pledge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>guarantee_subtype__c</fullName>
        <label>Subtipo de garantía</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INMUEBLE</fullName>
                </value>
                <value>
                    <fullName>NAVAL</fullName>
                </value>
                <value>
                    <fullName>AEREA</fullName>
                </value>
                <value>
                    <fullName>TIT. C.HIPO</fullName>
                </value>
                <value>
                    <fullName>CTA.CTE</fullName>
                </value>
                <value>
                    <fullName>AHORRO</fullName>
                </value>
                <value>
                    <fullName>SUPER REN</fullName>
                </value>
                <value>
                    <fullName>FMUT.COLAT</fullName>
                </value>
                <value>
                    <fullName>MISMO DOCUM.</fullName>
                </value>
                <value>
                    <fullName>DOCUM. APARTE</fullName>
                </value>
                <value>
                    <fullName>CREDITOS</fullName>
                </value>
                <value>
                    <fullName>LOGISTICA</fullName>
                </value>
                <value>
                    <fullName>EXTERIOR</fullName>
                </value>
                <value>
                    <fullName>GTIAS FOGEM</fullName>
                </value>
                <value>
                    <fullName>Almacenero</fullName>
                </value>
                <value>
                    <fullName>Aduanero</fullName>
                </value>
                <value>
                    <fullName>acciones</fullName>
                </value>
                <value>
                    <fullName>Otros valores</fullName>
                </value>
                <value>
                    <fullName>fideicomiso</fullName>
                </value>
                <value>
                    <fullName>fiduciario.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guarantor_account_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codigo central (cliente)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Detalles de garantías</relationshipLabel>
        <relationshipName>Detalles_Garantias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>guarantor_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre fiador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantor_personal_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issuing_entity_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bco emisor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_assessed_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Tasación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>other_information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>service_start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>warrant_certificate_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>N° de certificado</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>withholding_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de retención</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Detalle de garantía</label>
    <nameField>
        <displayFormat>DG-{0000000}</displayFormat>
        <label>Detalle de garantía</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles de garantías</pluralLabel>
    <recordTypes>
        <fullName>Avales</fullName>
        <active>true</active>
        <label>Avales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depositos</fullName>
        <active>true</active>
        <label>Depósitos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hipotecas</fullName>
        <active>true</active>
        <label>Hipotecas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Otros</fullName>
        <active>true</active>
        <label>Otros</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prendas</fullName>
        <active>true</active>
        <label>Prendas</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>